# symmetry_detector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: mathUtils.h
include/MathFunctions/: mathUtils.h
src/: main.cc
